--- a/index.html
+++ b/index.html
@@ -12,63 +12,10 @@
 </head>
 <body>
 
-<div class="full-width bg-white art-section">
-    <div class="container">
-        <h2 class="heading">Art by Michael Ferrell</h2>
-        <h3 class="heading-secondary">Acrylic and canvas</h3>
-        <div class="col-third">
-            <div class="art-box">
-                <img src="art/graffiti_sunset.jpg" class="art-piece" data-action="zoom"/>
-                <span class="art-title">Graffiti Sunrise</span>
-            </div>
-            <div class="art-box">
-                <img src="art/eruption.jpg" class="art-piece" data-action="zoom"/>
-                <span class="art-title">Eruption</span>
-            </div>
-            <div class="art-box">
-                <img src="art/train-graffiti.jpg" class="art-piece" data-action="zoom"/>
-                <span class="art-title">Train Graffiti</span>
-            </div>
-        </div>
-        <div class="col-third">
-        <div class="art-box">
-                <img src="art/eruption.jpg" class="art-piece" data-action="zoom"/>
-                <span class="art-title">Graffiti Sunrise</span>
-            </div>
-            <div class="art-box">
-                <img src="art/train-graffiti.jpg" class="art-piece" data-action="zoom"/>
-                <span class="art-title">Eruption</span>
-            </div>
-            <div class="art-box">
-                <img src="art/graffiti_sunset.jpg" class="art-piece" data-action="zoom"/>
-                <span class="art-title">Train Graffiti</span>
-            </div>
-        </div>
-        <div class="col-third">
-        <div class="art-box">
-            <img src="art/untitled_3.jpg" class="art-piece" data-action="zoom"/>
-            <span class="art-title">Untitled</span>
-        </div>
-        <div class="art-box">
-            <img src="art/untitled.jpg" class="art-piece" data-action="zoom"/>
-            <span class="art-title">Burnt Toast</span>
-        </div>
-        <div class="art-box">
-            <img src="art/shower_of_hope.jpg" class="art-piece" data-action="zoom"/>
-            <span class="art-title">Shower of Hope</span>
-        </div>
-        </div>
-
-
-
-
-
-
-
-
-
-
-        <!--  -->
+<div class="container">
+    <h2 class="heading">Art by Michael Ferrell</h2>
+    <h3 class="heading-secondary">Acrylic and canvas</h3>
+    <div class="col-third">
         <div class="art-box">
             <img src="art/graffiti_sunset.jpg" class="art-piece" data-action="zoom"/>
             <span class="art-title">Graffiti Sunrise</span>
@@ -90,6 +37,12 @@
             <span class="art-title">Untitled</span>
         </div>
         <div class="art-box">
+            <img src="art/violent_waterfall.jpg" class="art-piece" data-action="zoom"/>
+            <span class="art-title">Slang For Movement</span>
+        </div>
+    </div>
+    <div class="col-third">
+        <div class="art-box">
             <img src="art/infinity.jpg" class="art-piece" data-action="zoom"/>
             <span class="art-title">Infinity</span>
         </div>
@@ -109,6 +62,12 @@
             <img src="art/untitled_3.jpg" class="art-piece" data-action="zoom"/>
             <span class="art-title">Untitled</span>
         </div>
+        <div class="art-box">
+            <img src="art/slang_for_movement.jpg" class="art-piece" data-action="zoom"/>
+            <span class="art-title">Slang For Movement</span>
+        </div>
+    </div>
+    <div class="col-third">
         <div class="art-box">
             <img src="art/untitled.jpg" class="art-piece" data-action="zoom"/>
             <span class="art-title">Burnt Toast</span>
@@ -147,7 +106,6 @@
 </footer>
 
 <script src="js/jquery.min.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-instagram/0.2.2/jquery.instagram.min.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
