--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
         </div>
         <div class="art-box">
             <img src="art/violent_waterfall.jpg" class="art-piece" data-action="zoom"/>
-            <span class="art-title">Slang For Movement</span>
+            <span class="art-title">Untitled</span>
+        </div>
+        <div class="art-box">
+            <img src="art/untitled_5.jpg" class="art-piece" data-action="zoom"/>
+            <span class="art-title">Untitled</span>
         </div>
     </div>
     <div class="col-third">
@@ -73,6 +77,10 @@
             <span class="art-title">Burnt Toast</span>
         </div>
         <div class="art-box">
+            <img src="art/serenity.jpg" class="art-piece" data-action="zoom"/>
+            <span class="art-title">Serenity</span>
+        </div>
+        <div class="art-box">
             <img src="art/shower_of_hope.jpg" class="art-piece" data-action="zoom"/>
             <span class="art-title">Shower of Hope</span>
         </div>
@@ -83,10 +91,6 @@
         <div class="art-box">
             <img src="art/ocean_effect.jpg" class="art-piece" data-action="zoom"/>
             <span class="art-title">Ocean Effect</span>
-        </div>
-        <div class="art-box">
-            <img src="art/untitled_5.jpg" class="art-piece" data-action="zoom"/>
-            <span class="art-title">Untitled</span>
         </div>
         <div class="art-box">
             <img src="art/untitled_4.jpg" class="art-piece" data-action="zoom"/>
