--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
     </div>
     <div class="col-third">
         <div class="art-box">
+            <img src="art/day_at_the_park.jpg" class="art-piece" data-action="zoom"/>
+            <span class="art-title">Day at the Park</span>
+        </div>
+        <div class="art-box">
             <img src="art/untitled.jpg" class="art-piece" data-action="zoom"/>
             <span class="art-title">Burnt Toast</span>
         </div>
