--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
             <span class="art-title">Infinity</span>
         </div>
         <div class="art-box">
+            <img src="art/no_name.jpg" class="art-piece" data-action="zoom"/>
+            <span class="art-title">Untitled</span>
+        </div>
+        <div class="art-box">
             <img src="art/when_the_colors_meet.jpg" class="art-piece" data-action="zoom"/>
             <span class="art-title">When the Colors Meet</span>
         </div>
