--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
             <span class="art-title">When the Colors Meet</span>
         </div>
         <div class="art-box">
+            <img src="art/day_at_the_park.jpg" class="art-piece" data-action="zoom"/>
+            <span class="art-title">Day at the Park</span>
+        </div>
+        <div class="art-box">
             <img src="art/black-red-yellow-grey.jpg" class="art-piece" data-action="zoom"/>
             <span class="art-title">Untitled</span>
         </div>
@@ -77,8 +81,8 @@
     </div>
     <div class="col-third">
         <div class="art-box">
-            <img src="art/day_at_the_park.jpg" class="art-piece" data-action="zoom"/>
-            <span class="art-title">Day at the Park</span>
+            <img src="art/marins_way.jpg" class="art-piece" data-action="zoom"/>
+            <span class="art-title">Marin's Way</span>
         </div>
         <div class="art-box">
             <img src="art/untitled.jpg" class="art-piece" data-action="zoom"/>
