--- a/demo.html
+++ b/demo.html
@@ -4,41 +4,31 @@
   <head>
     <meta charset="utf-8" />
     <title>Infinite Scrolling, Demo 1</title>
-    <link rel="stylesheet" href="css/masonry.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" data-semver="2.2.0" data-require="jquery@*"></script>
-    <script src="js/masonry.js"></script>
     <script src="js/infinite-scroll.js"></script>
     <script type="text/javascript">
-$(document).ready(function() {
-  var grid = $('.grid');
+    $(document).ready(function() {
+      $('.grid').infinitescroll({
+        // Pagination element that will be hidden
+        navSelector: '#pagination',
 
-  grid.masonry({
-    itemSelector: '.grid-item',
-    columnWidth: 200
-  });
+        // Next page link
+        nextSelector: '#pagination p a',
 
-  grid.infinitescroll({
-    // Pagination element that will be hidden
-    navSelector: '#pagination',
+        // Selector of items to retrieve
+        itemSelector: '.grid-item',
 
-    // Next page link
-    nextSelector: '#pagination p a',
+        // Loading message
+        loadingText: 'Loading new items…'
+      },
 
-    // Selector of items to retrieve
-    itemSelector: '.grid-item',
+      // Function called once the elements are retrieved
+      function(new_elts) {
+        var elts = $(new_elts).css('opacity', 0);
 
-    // Loading message
-    loadingText: 'Loading new items…'
-  },
-
-  // Function called once the elements are retrieved
-  function(new_elts) {
-    var elts = $(new_elts).css('opacity', 0);
-
-    elts.animate({opacity: 1});
-    grid.masonry('appended', elts);
-  });
-});
+        elts.animate({opacity: 1}, 250);
+      });
+    });
     </script>
   </head>
 
@@ -46,12 +36,12 @@ $(document).ready(function() {
     <h1>Infinite Scrolling, Demo 1</h1>
     <div class="grid">
       <div class="grid-item grid-item-2">
-        <p><Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sed dignissim orci. Cras pellentesque eros eu lectus pulvinar, at tincidunt lorem malesuada. Suspendisse pulvinar auctor pretium. Nunc ornare mollis augue ac convallis.</p>
+        <p>ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sed dignissim orci. Cras pellentesque eros eu lectus pulvinar, at tincidunt lorem malesuada. Suspendisse pulvinar auctor pretium. Nunc ornare mollis augue ac convallis.</p>
       </div>
-      <div class="grid-item">
+      <div class="grid-item grid-item-2">
         <p>Aenean orci purus, congue sed consequat interdum, dignissim sed dolor. Donec sed velit dolor. Ut accumsan, orci sed suscipit dignissim, erat massa pulvinar ex, vitae malesuada quam augue vel metus.</p>
       </div>
-      <div class="grid-item">
+      <div class="grid-item grid-item-2">
         <p>Etiam tempor vestibulum turpis, eget ullamcorper eros. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum vel augue ac felis imperdiet convallis. Nam at libero vitae odio vehicula facilisis.</p>
       </div>
       <div class="grid-item">
