--- a/index.html
+++ b/index.html
@@ -25,19 +25,11 @@
             <span class="art-title">Eruption</span>
         </div>
         <div class="art-box">
-            <img src="art/train-graffiti.jpg" class="art-piece" data-action="zoom"/>
-            <span class="art-title">Train Graffiti</span>
-        </div>
-        <div class="art-box">
-            <img src="art/color_streets.jpg" class="art-piece" data-action="zoom"/>
-            <span class="art-title">Color In the Streets</span>
+            <img src="art/infinity.jpg" class="art-piece" data-action="zoom"/>
+            <span class="art-title">Infinity</span>
         </div>
         <div class="art-box">
             <img src="art/black-brown-yellow.jpg" class="art-piece" data-action="zoom"/>
-            <span class="art-title">Untitled</span>
-        </div>
-        <div class="art-box">
-            <img src="art/violent_waterfall.jpg" class="art-piece" data-action="zoom"/>
             <span class="art-title">Untitled</span>
         </div>
         <div class="art-box">
@@ -48,14 +40,34 @@
             <img src="art/slang_for_movement.jpg" class="art-piece" data-action="zoom"/>
             <span class="art-title">Slang For Movement</span>
         </div>
+        <div class="art-box">
+            <img src="art/untitled_3.jpg" class="art-piece" data-action="zoom"/>
+            <span class="art-title">Untitled</span>
+        </div>
+        <div class="art-box">
+            <img src="art/violent_waterfall.jpg" class="art-piece" data-action="zoom"/>
+            <span class="art-title">Untitled</span>
+        </div>
     </div>
     <div class="col-third">
         <div class="art-box">
-            <img src="art/infinity.jpg" class="art-piece" data-action="zoom"/>
-            <span class="art-title">Infinity</span>
+            <img src="art/train-graffiti.jpg" class="art-piece" data-action="zoom"/>
+            <span class="art-title">Train Graffiti</span>
+        </div>
+        <div class="art-box">
+            <img src="art/color_streets.jpg" class="art-piece" data-action="zoom"/>
+            <span class="art-title">Color In the Streets</span>
         </div>
         <div class="art-box">
             <img src="art/no_name.jpg" class="art-piece" data-action="zoom"/>
+            <span class="art-title">Untitled</span>
+        </div>
+        <div class="art-box">
+            <img src="art/day_at_the_park.jpg" class="art-piece" data-action="zoom"/>
+            <span class="art-title">Day at the Park</span>
+        </div>
+        <div class="art-box">
+            <img src="art/earths_shake.jpg" class="art-piece" data-action="zoom"/>
             <span class="art-title">Untitled</span>
         </div>
         <div class="art-box">
@@ -63,19 +75,7 @@
             <span class="art-title">When the Colors Meet</span>
         </div>
         <div class="art-box">
-            <img src="art/day_at_the_park.jpg" class="art-piece" data-action="zoom"/>
-            <span class="art-title">Day at the Park</span>
-        </div>
-        <div class="art-box">
             <img src="art/black-red-yellow-grey.jpg" class="art-piece" data-action="zoom"/>
-            <span class="art-title">Untitled</span>
-        </div>
-        <div class="art-box">
-            <img src="art/earths_shake.jpg" class="art-piece" data-action="zoom"/>
-            <span class="art-title">Untitled</span>
-        </div>
-        <div class="art-box">
-            <img src="art/untitled_3.jpg" class="art-piece" data-action="zoom"/>
             <span class="art-title">Untitled</span>
         </div>
     </div>
@@ -83,6 +83,10 @@
         <div class="art-box">
             <img src="art/marins_way.jpg" class="art-piece" data-action="zoom"/>
             <span class="art-title">Marin's Way</span>
+        </div>
+        <div class="art-box">
+            <img src="art/steelhead.jpg" class="art-piece" data-action="zoom"/>
+            <span class="art-title">Steelhead</span>
         </div>
         <div class="art-box">
             <img src="art/untitled.jpg" class="art-piece" data-action="zoom"/>
