--- a/index.html
+++ b/index.html
@@ -101,15 +101,15 @@
             <span class="art-title">Shower of Hope</span>
         </div>
         <div class="art-box">
-            <img src="art/green_heavy.jpg" class="art-piece" data-action="zoom"/>
-            <span class="art-title">Shower of Hope</span>
-        </div>
-        <div class="art-box">
             <img src="art/ocean_effect.jpg" class="art-piece" data-action="zoom"/>
             <span class="art-title">Ocean Effect</span>
         </div>
         <div class="art-box">
             <img src="art/untitled_4.jpg" class="art-piece" data-action="zoom"/>
+            <span class="art-title">Untitled</span>
+        </div>
+        <div class="art-box">
+            <img src="art/green_heavy.jpg" class="art-piece" data-action="zoom"/>
             <span class="art-title">Untitled</span>
         </div>
     </div>
