--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="col-third">
         <div class="art-box">
             <img src="art/train-graffiti.jpg" class="art-piece" data-action="zoom"/>
-            <span class="art-title">Train Graffiti</span>
+            <span class="art-title">Train Yard</span>
         </div>
         <div class="art-box">
             <img src="art/color_streets.jpg" class="art-piece" data-action="zoom"/>
