--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
             <span class="art-title">Color In the Streets</span>
         </div>
         <div class="art-box">
+            <img src="art/untitled_6.jpg" class="art-piece" data-action="zoom"/>
+            <span class="art-title">Untitled</span>
+        </div>
+        <div class="art-box">
             <img src="art/no_name.jpg" class="art-piece" data-action="zoom"/>
             <span class="art-title">Untitled</span>
         </div>
