--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@
     </div>
     <div class="col-third">
         <div class="art-box">
+            <img src="art/cumulonimbus.jpg" class="art-piece" data-action="zoom"/>
+            <span class="art-title">Cumulonimbus</span>
+        </div>
+        <div class="art-box">
             <img src="art/marins_way.jpg" class="art-piece" data-action="zoom"/>
             <span class="art-title">Marin's Way</span>
         </div>
