--- a/index.html
+++ b/index.html
@@ -29,10 +29,6 @@
             <span class="art-title">Infinity</span>
         </div>
         <div class="art-box">
-            <img src="art/black-brown-yellow.jpg" class="art-piece" data-action="zoom"/>
-            <span class="art-title">Untitled</span>
-        </div>
-        <div class="art-box">
             <img src="art/untitled_5.jpg" class="art-piece" data-action="zoom"/>
             <span class="art-title">Untitled</span>
         </div>
@@ -41,11 +37,19 @@
             <span class="art-title">Slang For Movement</span>
         </div>
         <div class="art-box">
-            <img src="art/untitled_3.jpg" class="art-piece" data-action="zoom"/>
+            <img src="art/violent_waterfall.jpg" class="art-piece" data-action="zoom"/>
             <span class="art-title">Untitled</span>
         </div>
         <div class="art-box">
-            <img src="art/violent_waterfall.jpg" class="art-piece" data-action="zoom"/>
+            <img src="art/black_blue_grey.jpg" class="art-piece" data-action="zoom"/>
+            <span class="art-title">Untitled</span>
+        </div>
+        <div class="art-box">
+            <img src="art/black-brown-yellow.jpg" class="art-piece" data-action="zoom"/>
+            <span class="art-title">Untitled</span>
+        </div>
+        <div class="art-box">
+            <img src="art/green_heavy.jpg" class="art-piece" data-action="zoom"/>
             <span class="art-title">Untitled</span>
         </div>
     </div>
@@ -59,16 +63,12 @@
             <span class="art-title">Color In the Streets</span>
         </div>
         <div class="art-box">
-            <img src="art/untitled_6.jpg" class="art-piece" data-action="zoom"/>
-            <span class="art-title">Untitled</span>
+            <img src="art/ocean_effect.jpg" class="art-piece" data-action="zoom"/>
+            <span class="art-title">Ocean Effect</span>
         </div>
         <div class="art-box">
             <img src="art/no_name.jpg" class="art-piece" data-action="zoom"/>
             <span class="art-title">Untitled</span>
-        </div>
-        <div class="art-box">
-            <img src="art/day_at_the_park.jpg" class="art-piece" data-action="zoom"/>
-            <span class="art-title">Day at the Park</span>
         </div>
         <div class="art-box">
             <img src="art/earths_shake.jpg" class="art-piece" data-action="zoom"/>
@@ -82,8 +82,25 @@
             <img src="art/black-red-yellow-grey.jpg" class="art-piece" data-action="zoom"/>
             <span class="art-title">Untitled</span>
         </div>
+        <div class="art-box">
+            <img src="art/untitled_3.jpg" class="art-piece" data-action="zoom"/>
+            <span class="art-title">Untitled</span>
+        </div>
+        <div class="art-box">
+            <img src="art/untitled_6.jpg" class="art-piece" data-action="zoom"/>
+            <span class="art-title">Untitled</span>
+        </div>
     </div>
     <div class="col-third">
+        <div class="art-box">
+            <img src="art/expressionism-colorful.jpg" class="art-piece" data-action="zoom"/>
+            <span class="art-title">Untitled</span>
+            
+        </div>
+        <div class="art-box">
+            <img src="art/black_blue_lines.jpg" class="art-piece" data-action="zoom"/>
+            <span class="art-title">Untitled</span>
+        </div>
         <div class="art-box">
             <img src="art/cumulonimbus.jpg" class="art-piece" data-action="zoom"/>
             <span class="art-title">Cumulonimbus</span>
@@ -109,15 +126,7 @@
             <span class="art-title">Shower of Hope</span>
         </div>
         <div class="art-box">
-            <img src="art/ocean_effect.jpg" class="art-piece" data-action="zoom"/>
-            <span class="art-title">Ocean Effect</span>
-        </div>
-        <div class="art-box">
             <img src="art/untitled_4.jpg" class="art-piece" data-action="zoom"/>
-            <span class="art-title">Untitled</span>
-        </div>
-        <div class="art-box">
-            <img src="art/green_heavy.jpg" class="art-piece" data-action="zoom"/>
             <span class="art-title">Untitled</span>
         </div>
     </div>
