new art ttitles

--- a/index.html
+++ b/index.html
@@ -30,27 +30,22 @@
         </div>
         <div class="art-box">
             <img src="art/untitled_5.jpg" class="art-piece" data-action="zoom"/>
-            <span class="art-title">Untitled</span>
         </div>
         <div class="art-box">
             <img src="art/slang_for_movement.jpg" class="art-piece" data-action="zoom"/>
             <span class="art-title">Slang For Movement</span>
         </div>
         <div class="art-box">
-            <img src="art/violent_waterfall.jpg" class="art-piece" data-action="zoom"/>
-            <span class="art-title">Untitled</span>
-        </div>
-        <div class="art-box">
             <img src="art/black_blue_grey.jpg" class="art-piece" data-action="zoom"/>
-            <span class="art-title">Untitled</span>
         </div>
         <div class="art-box">
             <img src="art/black-brown-yellow.jpg" class="art-piece" data-action="zoom"/>
-            <span class="art-title">Untitled</span>
         </div>
         <div class="art-box">
             <img src="art/green_heavy.jpg" class="art-piece" data-action="zoom"/>
-            <span class="art-title">Untitled</span>
+        </div>
+        <div class="art-box">
+            <img src="art/violent_waterfall.jpg" class="art-piece" data-action="zoom"/>
         </div>
     </div>
     <div class="col-third">
@@ -68,11 +63,9 @@
         </div>
         <div class="art-box">
             <img src="art/no_name.jpg" class="art-piece" data-action="zoom"/>
-            <span class="art-title">Untitled</span>
         </div>
         <div class="art-box">
             <img src="art/earths_shake.jpg" class="art-piece" data-action="zoom"/>
-            <span class="art-title">Untitled</span>
         </div>
         <div class="art-box">
             <img src="art/when_the_colors_meet.jpg" class="art-piece" data-action="zoom"/>
@@ -80,26 +73,21 @@
         </div>
         <div class="art-box">
             <img src="art/black-red-yellow-grey.jpg" class="art-piece" data-action="zoom"/>
-            <span class="art-title">Untitled</span>
         </div>
         <div class="art-box">
             <img src="art/untitled_3.jpg" class="art-piece" data-action="zoom"/>
-            <span class="art-title">Untitled</span>
         </div>
         <div class="art-box">
             <img src="art/untitled_6.jpg" class="art-piece" data-action="zoom"/>
-            <span class="art-title">Untitled</span>
         </div>
     </div>
     <div class="col-third">
         <div class="art-box">
             <img src="art/expressionism-colorful.jpg" class="art-piece" data-action="zoom"/>
-            <span class="art-title">Untitled</span>
-            
+            <span class="art-title">Confetti</span>
         </div>
         <div class="art-box">
             <img src="art/black_blue_lines.jpg" class="art-piece" data-action="zoom"/>
-            <span class="art-title">Untitled</span>
         </div>
         <div class="art-box">
             <img src="art/cumulonimbus.jpg" class="art-piece" data-action="zoom"/>
@@ -127,7 +115,6 @@
         </div>
         <div class="art-box">
             <img src="art/untitled_4.jpg" class="art-piece" data-action="zoom"/>
-            <span class="art-title">Untitled</span>
         </div>
     </div>
 </div>
